--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1050,6 +1050,10 @@ input:checked + .toggle-bg {
   position: relative;
 }
 
+.sticky {
+  position: sticky;
+}
+
 .inset-0 {
   inset: 0px;
 }
@@ -1092,6 +1096,14 @@ input:checked + .toggle-bg {
 
 .top-4 {
   top: 1rem;
+}
+
+.top-\[100px\] {
+  top: 100px;
+}
+
+.top-\[90px\] {
+  top: 90px;
 }
 
 .z-10 {
@@ -1200,6 +1212,14 @@ input:checked + .toggle-bg {
   margin-bottom: 1.5rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .block {
   display: block;
 }
@@ -1289,6 +1309,10 @@ input:checked + .toggle-bg {
   height: fit-content;
 }
 
+.h-36 {
+  height: 9rem;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -1345,8 +1369,44 @@ input:checked + .toggle-bg {
   width: 300px;
 }
 
+.w-36 {
+  width: 9rem;
+}
+
+.w-52 {
+  width: 13rem;
+}
+
+.w-\[650\] {
+  width: 650;
+}
+
+.w-\[650px\] {
+  width: 650px;
+}
+
+.w-\[660px\] {
+  width: 660px;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[250px\] {
+  width: 250px;
+}
+
 .max-w-xs {
   max-width: 20rem;
+}
+
+.max-w-\[1400px\] {
+  max-width: 1400px;
+}
+
+.max-w-7xl {
+  max-width: 80rem;
 }
 
 .flex-1 {
@@ -1359,6 +1419,10 @@ input:checked + .toggle-bg {
 
 .flex-shrink-0 {
   flex-shrink: 0;
+}
+
+.grow {
+  flex-grow: 1;
 }
 
 .-translate-x-1\/2 {
@@ -1690,6 +1754,11 @@ input:checked + .toggle-bg {
   background-color: rgb(46 140 155 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#24727e\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 114 126 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -1784,6 +1853,11 @@ input:checked + .toggle-bg {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pb-4 {
@@ -2059,6 +2133,36 @@ input:checked + .toggle-bg {
 .hover\:bg-\[\#111622\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(17 22 34 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#44d0e6\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(68 208 230 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#39AEC0\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(57 174 192 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#38bace\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(56 186 206 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#40c4d8\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 196 216 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#24727e\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 114 126 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#2d8c9b\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 140 155 / var(--tw-bg-opacity));
 }
 
 .hover\:text-\[\#39AEC0\]:hover {
